fix paths to scss files

--- a/src/sass/vars/576.scss
+++ b/src/sass/vars/576.scss
@@ -1,4 +1,4 @@
 // application variables for 720x576
 
 // inherit all stb-app vars
-@import "../../node_modules/mag-app/sass/vars/576";
+@import "../../../node_modules/mag-app/sass/vars/576";
