--- a/src/sass/vars/480.scss
+++ b/src/sass/vars/480.scss
@@ -1,4 +1,4 @@
 // application variables for 720x480
 
 // inherit all stb-app vars
-@import "../../node_modules/mag-app/sass/vars/480";
+@import "../../../node_modules/mag-app/sass/vars/480";
