--- a/app/css/release.sdk.1080.css
+++ b/app/css/release.sdk.1080.css
@@ -1,8 +1,8 @@
 /* spa-app: release */
 html, body {
-    height: 720px;
-    width: 1280px;
-    font-size: 22px;
+    height: 1080px;
+    width: 1920px;
+    font-size: 33px;
     font-family: Ubuntu, sans-serif;
     overflow: hidden;
     margin: 0;
@@ -24,48 +24,25 @@ table {
 a {
     text-decoration: none; }
 
-/* spa-app: develop */
-body.develop {
-    outline: 1px solid yellow;
-    outline-offset: -1px; }
-
 /* stb-app: release */
 html, body {
     -webkit-user-select: none; }
 
-/* stb-app: develop */
-html, body {
-    -webkit-user-select: text; }
-
-body > canvas {
-    cursor: none;
-    visibility: hidden;
-    position: absolute; }
-    body > canvas.active {
-        visibility: visible; }
-
 /* mag-app: release */
-/* mag-app: develop */
 
 
 .stb-component-page {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    width: 1280px;
-    height: 720px;
+    width: 1920px;
+    height: 1080px;
     position: absolute;
     left: 0;
     top: 0;
     visibility: hidden;
-    overflow: hidden;
-    outline: 1px dashed #005000;
-    outline-offset: -1px; }
+    overflow: hidden; }
     .stb-component-page.hidden {
         display: none; }
     .stb-component-page.active {
         visibility: inherit; }
-    .stb-component-page.focus {
-        outline: 1px dashed red; }
-
-/* application: develop */
 
