--- a/app/css/release.sdk.1080.css
+++ b/app/css/release.sdk.1080.css
@@ -49,30 +49,32 @@ html, body {
     .mag-component-footer > table {
         vertical-align: middle;
         text-align: center; }
-        .mag-component-footer > table > tr > td {
+        .mag-component-footer > table > tbody > tr > td {
             width: 54px; }
-            .mag-component-footer > table > tr > td.central {
+            .mag-component-footer > table > tbody > tr > td.central {
                 width: 1632px; }
-                .mag-component-footer > table > tr > td.central > .wrapper {
+                .mag-component-footer > table > tbody > tr > td.central > .wrapper {
                     height: 54px;
                     visibility: inherit; }
-                    .mag-component-footer > table > tr > td.central > .wrapper.hidden {
+                    .mag-component-footer > table > tbody > tr > td.central > .wrapper.hidden {
                         display: none; }
-                    .mag-component-footer > table > tr > td.central > .wrapper > .button {
+                    .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button {
                         display: inline-block;
                         height: 54px;
                         padding: 0 30px 0 22.5px; }
-                        .mag-component-footer > table > tr > td.central > .wrapper > .button.hidden {
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button.disabled {
+                            opacity: 0.3; }
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button.hidden {
                             display: none; }
-                        .mag-component-footer > table > tr > td.central > .wrapper > .button .title {
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button .title {
                             padding-left: 15px; }
-            .mag-component-footer > table > tr > td .iconImg, .mag-component-footer > table > tr > td .iconImg:before {
+            .mag-component-footer > table > tbody > tr > td .iconImg, .mag-component-footer > table > tbody > tr > td .iconImg:before {
                 height: 54px;
                 line-height: 54px;
                 width: 54px;
                 text-align: center;
                 float: left; }
-            .mag-component-footer > table > tr > td .title {
+            .mag-component-footer > table > tbody > tr > td .title {
                 display: block;
                 float: right; }
 
@@ -138,9 +140,13 @@ html, body {
     left: 0;
     top: 0;
     display: table;
-    z-index: 10; }
+    z-index: 10;
+    visibility: visible; }
     .mag-component-modal.hidden {
         display: none; }
+    .mag-component-modal.hidden {
+        display: table;
+        visibility: hidden; }
     .mag-component-modal.active > div > div > div.overlay {
         display: none; }
     .mag-component-modal > div {
