--- a/app/css/develop.app.576.css
+++ b/app/css/develop.app.576.css
@@ -1,3 +1,25 @@
 /* application: develop */
+.mag-component-panel .mag-component-scroll-area {
+    height: 295px; }
+
+.mag-component-panel .stb-component-scrollbar {
+    position: absolute;
+    height: 315px;
+    right: 5px;
+    top: 45px; }
+
+.mag-component-panel.main .stb-component-scrollbar {
+    height: 350px;
+    top: 50px; }
+
+.mag-component-modal .body {
+    position: relative; }
+
+.mag-component-modal .stb-component-scrollbar {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    z-index: 3; }
 
 /*# sourceMappingURL=develop.app.576.map */
