--- a/app/css/develop.sdk.576.css
+++ b/app/css/develop.sdk.576.css
@@ -50,6 +50,249 @@ body > canvas {
 /* mag-app: release */
 /* mag-app: develop */
 
+.mag-component-scroll-area {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    overflow: hidden;
+    height: 100%;
+    position: relative;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .mag-component-scroll-area.hidden {
+        display: none; }
+    .mag-component-scroll-area > .body {
+        position: absolute; }
+    .mag-component-scroll-area.focus {
+        outline: 1px dashed red; }
+
+.stb-component-scrollbar {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    display: inline-block;
+    height: 100%;
+    width: 4px;
+    vertical-align: bottom;
+    background-color: #bbb;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .stb-component-scrollbar.hidden {
+        display: none; }
+    .stb-component-scrollbar .thumb {
+        display: block;
+        width: 4px;
+        min-height: 4px;
+        background-color: #aaa; }
+        .stb-component-scrollbar .thumb.hidden {
+            display: none; }
+    .stb-component-scrollbar.horizontal {
+        display: block;
+        height: 4.8px;
+        width: 100%; }
+        .stb-component-scrollbar.horizontal .thumb {
+            display: inline-block;
+            vertical-align: top;
+            height: 4.8px;
+            min-width: 4.8px; }
+    .stb-component-scrollbar.focus {
+        outline: 1px dashed red; }
+
+.mag-component-check-list {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .mag-component-check-list.hidden {
+        display: none; }
+    .mag-component-check-list > .body > .item {
+        cursor: pointer;
+        padding: 0 5px;
+        vertical-align: middle;
+        height: 38.4px;
+        line-height: 38.4px; }
+    .mag-component-check-list.horizontal {
+        display: table;
+        table-layout: fixed;
+        width: 100%; }
+        .mag-component-check-list.horizontal > .item {
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle; }
+    .mag-component-check-list > .item .checkBoxWrapper > div {
+        display: block; }
+    .mag-component-check-list.focus {
+        outline: 1px dashed red; }
+
+.mag-component-modal {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: table;
+    z-index: 10;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .mag-component-modal.hidden {
+        display: none; }
+    .mag-component-modal.active > div > div > div.overlay {
+        display: none; }
+    .mag-component-modal > div {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center; }
+        .mag-component-modal > div > div {
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+            max-width: 80%;
+            min-width: 172.5px;
+            max-height: 80%; }
+            .mag-component-modal > div > div > div.header {
+                height: 50px;
+                line-height: 50px;
+                font-size: 24px;
+                padding: 0 20px; }
+                .mag-component-modal > div > div > div.header .text {
+                    display: table-cell;
+                    vertical-align: middle;
+                    text-align: center; }
+                    .mag-component-modal > div > div > div.header .text:empty {
+                        padding: 0; }
+            .mag-component-modal > div > div > div.body {
+                position: relative; }
+                .mag-component-modal > div > div > div.body > div .item {
+                    height: 45px;
+                    line-height: 45px;
+                    padding: 0 20px; }
+            .mag-component-modal > div > div > div.overlay {
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0; }
+    .mag-component-modal.focus {
+        outline: 1px dashed red; }
+
+.mag-component-modal-check-list {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: table;
+    z-index: 10;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .mag-component-modal-check-list.hidden {
+        display: none; }
+    .mag-component-modal-check-list.active > div > div > div.overlay {
+        display: none; }
+    .mag-component-modal-check-list > div {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center; }
+        .mag-component-modal-check-list > div > div {
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+            max-width: 80%;
+            min-width: 172.5px;
+            max-height: 80%; }
+            .mag-component-modal-check-list > div > div > div.header {
+                height: 50px;
+                line-height: 50px;
+                font-size: 24px;
+                padding: 0 20px; }
+                .mag-component-modal-check-list > div > div > div.header .text {
+                    display: table-cell;
+                    vertical-align: middle;
+                    text-align: center; }
+                    .mag-component-modal-check-list > div > div > div.header .text:empty {
+                        padding: 0; }
+            .mag-component-modal-check-list > div > div > div.body {
+                position: relative; }
+                .mag-component-modal-check-list > div > div > div.body > div .item {
+                    height: 45px;
+                    line-height: 45px;
+                    padding: 0 20px; }
+            .mag-component-modal-check-list > div > div > div.overlay {
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0; }
+    .mag-component-modal-check-list > div.alignBox > div > div.header {
+        display: table;
+        width: 100%; }
+        .mag-component-modal-check-list > div.alignBox > div > div.header > .theme-icon {
+            display: table-cell;
+            text-align: left; }
+        .mag-component-modal-check-list > div.alignBox > div > div.header > .text {
+            display: table-cell;
+            text-align: left; }
+    .mag-component-modal-check-list .stb-component-scrollbar {
+        position: absolute; }
+    .mag-component-modal-check-list.focus {
+        outline: 1px dashed red; }
+
+.leftListItemText {
+    max-width: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+
+.mag-component-layout {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    display: table;
+    width: 100%;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .mag-component-layout.hidden {
+        display: none; }
+    .mag-component-layout > div {
+        display: table-cell;
+        text-align: left;
+        vertical-align: middle;
+        height: 100%; }
+    .mag-component-layout.focus {
+        outline: 1px dashed red; }
+
+.mag-component-radio-list {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    outline: 1px dashed #005000;
+    outline-offset: -1px; }
+    .mag-component-radio-list.hidden {
+        display: none; }
+    .mag-component-radio-list > .body > .item {
+        cursor: pointer;
+        padding: 0 5px;
+        vertical-align: middle;
+        height: 38.4px;
+        line-height: 38.4px; }
+    .mag-component-radio-list.horizontal {
+        display: table;
+        table-layout: fixed;
+        width: 100%; }
+        .mag-component-radio-list.horizontal > .item {
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle; }
+    .mag-component-radio-list > .item .checkBoxWrapper >
+div {
+        display: block; }
+    .mag-component-radio-list.focus {
+        outline: 1px dashed red; }
+
 .mag-component-footer {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -68,30 +311,32 @@ body > canvas {
     .mag-component-footer > table {
         vertical-align: middle;
         text-align: center; }
-        .mag-component-footer > table > tr > td {
+        .mag-component-footer > table > tbody > tr > td {
             width: 28px; }
-            .mag-component-footer > table > tr > td.central {
+            .mag-component-footer > table > tbody > tr > td.central {
                 width: 544px; }
-                .mag-component-footer > table > tr > td.central > .wrapper {
+                .mag-component-footer > table > tbody > tr > td.central > .wrapper {
                     height: 28px;
                     visibility: inherit; }
-                    .mag-component-footer > table > tr > td.central > .wrapper.hidden {
+                    .mag-component-footer > table > tbody > tr > td.central > .wrapper.hidden {
                         display: none; }
-                    .mag-component-footer > table > tr > td.central > .wrapper > .button {
+                    .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button {
                         display: inline-block;
                         height: 28px;
                         padding: 0 10px 0 7.5px; }
-                        .mag-component-footer > table > tr > td.central > .wrapper > .button.hidden {
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button.disabled {
+                            opacity: 0.3; }
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button.hidden {
                             display: none; }
-                        .mag-component-footer > table > tr > td.central > .wrapper > .button .title {
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button .title {
                             padding-left: 5px; }
-            .mag-component-footer > table > tr > td .iconImg, .mag-component-footer > table > tr > td .iconImg:before {
+            .mag-component-footer > table > tbody > tr > td .iconImg, .mag-component-footer > table > tbody > tr > td .iconImg:before {
                 height: 28px;
                 line-height: 28px;
                 width: 28px;
                 text-align: center;
                 float: left; }
-            .mag-component-footer > table > tr > td .title {
+            .mag-component-footer > table > tbody > tr > td .title {
                 display: block;
                 float: right; }
     .mag-component-footer.focus {
@@ -164,10 +409,14 @@ body > canvas {
     top: 0;
     display: table;
     z-index: 10;
+    visibility: visible;
     outline: 1px dashed #005000;
     outline-offset: -1px; }
     .mag-component-modal.hidden {
         display: none; }
+    .mag-component-modal.hidden {
+        display: table;
+        visibility: hidden; }
     .mag-component-modal.active > div > div > div.overlay {
         display: none; }
     .mag-component-modal > div {
