--- a/app/css/release.sdk.720.css
+++ b/app/css/release.sdk.720.css
@@ -33,6 +33,221 @@ html, body {
 
 /* mag-app: release */
 
+.mag-component-scroll-area {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    overflow: hidden;
+    height: 100%;
+    position: relative; }
+    .mag-component-scroll-area.hidden {
+        display: none; }
+    .mag-component-scroll-area > .body {
+        position: absolute; }
+
+.stb-component-scrollbar {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    display: inline-block;
+    height: 100%;
+    width: 8px;
+    vertical-align: bottom;
+    background-color: #bbb; }
+    .stb-component-scrollbar.hidden {
+        display: none; }
+    .stb-component-scrollbar .thumb {
+        display: block;
+        width: 8px;
+        min-height: 8px;
+        background-color: #aaa; }
+        .stb-component-scrollbar .thumb.hidden {
+            display: none; }
+    .stb-component-scrollbar.horizontal {
+        display: block;
+        height: 8px;
+        width: 100%; }
+        .stb-component-scrollbar.horizontal .thumb {
+            display: inline-block;
+            vertical-align: top;
+            height: 8px;
+            min-width: 8px; }
+
+.mag-component-check-list {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%; }
+    .mag-component-check-list.hidden {
+        display: none; }
+    .mag-component-check-list > .body > .item {
+        cursor: pointer;
+        padding: 0 8px;
+        vertical-align: middle;
+        height: 48px;
+        line-height: 48px; }
+    .mag-component-check-list.horizontal {
+        display: table;
+        table-layout: fixed;
+        width: 100%; }
+        .mag-component-check-list.horizontal > .item {
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle; }
+    .mag-component-check-list > .item .checkBoxWrapper > div {
+        display: block; }
+
+.mag-component-modal {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: table;
+    z-index: 10; }
+    .mag-component-modal.hidden {
+        display: none; }
+    .mag-component-modal.active > div > div > div.overlay {
+        display: none; }
+    .mag-component-modal > div {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center; }
+        .mag-component-modal > div > div {
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+            max-width: 80%;
+            min-width: 266.25px;
+            max-height: 80%; }
+            .mag-component-modal > div > div > div.header {
+                height: 70px;
+                line-height: 70px;
+                font-size: 24px;
+                padding: 0 20px; }
+                .mag-component-modal > div > div > div.header .text {
+                    display: table-cell;
+                    vertical-align: middle;
+                    text-align: center; }
+                    .mag-component-modal > div > div > div.header .text:empty {
+                        padding: 0; }
+            .mag-component-modal > div > div > div.body {
+                position: relative; }
+                .mag-component-modal > div > div > div.body > div .item {
+                    height: 60px;
+                    line-height: 60px;
+                    padding: 0 20px; }
+            .mag-component-modal > div > div > div.overlay {
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0; }
+
+.mag-component-modal-check-list {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: table;
+    z-index: 10; }
+    .mag-component-modal-check-list.hidden {
+        display: none; }
+    .mag-component-modal-check-list.active > div > div > div.overlay {
+        display: none; }
+    .mag-component-modal-check-list > div {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center; }
+        .mag-component-modal-check-list > div > div {
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+            max-width: 80%;
+            min-width: 266.25px;
+            max-height: 80%; }
+            .mag-component-modal-check-list > div > div > div.header {
+                height: 70px;
+                line-height: 70px;
+                font-size: 24px;
+                padding: 0 20px; }
+                .mag-component-modal-check-list > div > div > div.header .text {
+                    display: table-cell;
+                    vertical-align: middle;
+                    text-align: center; }
+                    .mag-component-modal-check-list > div > div > div.header .text:empty {
+                        padding: 0; }
+            .mag-component-modal-check-list > div > div > div.body {
+                position: relative; }
+                .mag-component-modal-check-list > div > div > div.body > div .item {
+                    height: 60px;
+                    line-height: 60px;
+                    padding: 0 20px; }
+            .mag-component-modal-check-list > div > div > div.overlay {
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0; }
+    .mag-component-modal-check-list > div.alignBox > div > div.header {
+        display: table;
+        width: 100%; }
+        .mag-component-modal-check-list > div.alignBox > div > div.header > .theme-icon {
+            display: table-cell;
+            text-align: left; }
+        .mag-component-modal-check-list > div.alignBox > div > div.header > .text {
+            display: table-cell;
+            text-align: left; }
+    .mag-component-modal-check-list .stb-component-scrollbar {
+        position: absolute; }
+
+.leftListItemText {
+    max-width: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+
+.mag-component-layout {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    display: table;
+    width: 100%; }
+    .mag-component-layout.hidden {
+        display: none; }
+    .mag-component-layout > div {
+        display: table-cell;
+        text-align: left;
+        vertical-align: middle;
+        height: 100%; }
+
+.mag-component-radio-list {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%; }
+    .mag-component-radio-list.hidden {
+        display: none; }
+    .mag-component-radio-list > .body > .item {
+        cursor: pointer;
+        padding: 0 8px;
+        vertical-align: middle;
+        height: 48px;
+        line-height: 48px; }
+    .mag-component-radio-list.horizontal {
+        display: table;
+        table-layout: fixed;
+        width: 100%; }
+        .mag-component-radio-list.horizontal > .item {
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle; }
+    .mag-component-radio-list > .item .checkBoxWrapper >
+div {
+        display: block; }
+
 .mag-component-footer {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -49,30 +264,32 @@ html, body {
     .mag-component-footer > table {
         vertical-align: middle;
         text-align: center; }
-        .mag-component-footer > table > tr > td {
+        .mag-component-footer > table > tbody > tr > td {
             width: 36px; }
-            .mag-component-footer > table > tr > td.central {
+            .mag-component-footer > table > tbody > tr > td.central {
                 width: 1088px; }
-                .mag-component-footer > table > tr > td.central > .wrapper {
+                .mag-component-footer > table > tbody > tr > td.central > .wrapper {
                     height: 36px;
                     visibility: inherit; }
-                    .mag-component-footer > table > tr > td.central > .wrapper.hidden {
+                    .mag-component-footer > table > tbody > tr > td.central > .wrapper.hidden {
                         display: none; }
-                    .mag-component-footer > table > tr > td.central > .wrapper > .button {
+                    .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button {
                         display: inline-block;
                         height: 36px;
                         padding: 0 20px 0 15px; }
-                        .mag-component-footer > table > tr > td.central > .wrapper > .button.hidden {
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button.disabled {
+                            opacity: 0.3; }
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button.hidden {
                             display: none; }
-                        .mag-component-footer > table > tr > td.central > .wrapper > .button .title {
+                        .mag-component-footer > table > tbody > tr > td.central > .wrapper > .button .title {
                             padding-left: 10px; }
-            .mag-component-footer > table > tr > td .iconImg, .mag-component-footer > table > tr > td .iconImg:before {
+            .mag-component-footer > table > tbody > tr > td .iconImg, .mag-component-footer > table > tbody > tr > td .iconImg:before {
                 height: 36px;
                 line-height: 36px;
                 width: 36px;
                 text-align: center;
                 float: left; }
-            .mag-component-footer > table > tr > td .title {
+            .mag-component-footer > table > tbody > tr > td .title {
                 display: block;
                 float: right; }
 
@@ -138,9 +355,13 @@ html, body {
     left: 0;
     top: 0;
     display: table;
-    z-index: 10; }
+    z-index: 10;
+    visibility: visible; }
     .mag-component-modal.hidden {
         display: none; }
+    .mag-component-modal.hidden {
+        display: table;
+        visibility: hidden; }
     .mag-component-modal.active > div > div > div.overlay {
         display: none; }
     .mag-component-modal > div {
